--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -73,101 +73,102 @@
   </div>
 
   <div class="container-background">
-  <div class="time-wrapper">
-    <div class="time-content col-lg-8 col-md-9 col-11 p-lg-5 p-md-5 p-sm-3 p-2 rounded-5">
-      <h1 class="heading">WE ARE COMING SOON</h1>
-      <p class="description">Avsar Events
-        Tomorrowland for Gujaratis💃🕺
-        કેમ છો Navsari !!!
-        1st time ever AC DOME navratri in navsari🥳🥳</p>
+    <div class="time-wrapper">
+      <div class="time-content col-lg-8 col-md-9 col-11 p-lg-5 p-md-5 p-sm-3 p-2 rounded-5">
+        <h1 class="heading">WE ARE COMING SOON</h1>
+        <p class="description">Avsar Events
+          Tomorrowland for Gujaratis💃🕺
+          કેમ છો Navsari !!!
+          1st time ever AC DOME navratri in navsari🥳🥳</p>
 
-      <div class="timer">
-        <div class="sub_timer">
-          <h1 id="day" class="digit">00</h1>
-          <p class="digit_name">Days</p>
-        </div>
-        <div class="sub_timer">
-          <h1 id="hour" class="digit">00</h1>
-          <p class="digit_name">Hours</p>
-        </div>
-        <div class="sub_timer">
-          <h1 id="min" class="digit">00</h1>
-          <p class="digit_name">Minutes</p>
-        </div>
-        <div class="sub_timer">
-          <h1 id="sec" class="digit">00</h1>
-          <p class="digit_name">Seconds</p>
+        <div class="timer">
+          <div class="sub_timer">
+            <h1 id="day" class="digit">00</h1>
+            <p class="digit_name">Days</p>
+          </div>
+          <div class="sub_timer">
+            <h1 id="hour" class="digit">00</h1>
+            <p class="digit_name">Hours</p>
+          </div>
+          <div class="sub_timer">
+            <h1 id="min" class="digit">00</h1>
+            <p class="digit_name">Minutes</p>
+          </div>
+          <div class="sub_timer">
+            <h1 id="sec" class="digit">00</h1>
+            <p class="digit_name">Seconds</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="video">
-    <div class="container">
-      <P class="heading h1">Our A.C. Dome Concept</P>
-      <video class="col-12 position-relative top-0 start-50 translate-middle-x p-3 rounded-5"
-        src="/assests/video/model.MP4" autoplay loop controls>
+    <div class="video">
+      <div class="container">
+        <P class="heading h1">Our A.C. Dome Concept</P>
+        <video class="col-12 position-relative top-0 start-50 translate-middle-x p-3 rounded-5"
+          src="/assests/video/model.MP4" autoplay loop controls>
+      </div>
     </div>
-  </div>
 
-  <div class="booking py-5">
-    <div class="container">
-      <P class="heading h1">Get Your Pass Now</P>
-      <div class="booking-contain d-lg-flex d-md-flex d-sm-block gap-4">
-        <div class="pass col-12 col-lg-9 col-md-8">
-          <video class="rounded-4 col-12" src="assests/video/garba pass.mp4" autoplay muted loop>
-        </div>
-        <div class="booking-pass d-block align-content-center position-relative rounded-4 col-lg-3 col-md-4 p-lg-3 p-2">
-          <p>Experience Garba like never before! Our AC Dome provides the perfect setting for a night of dance, music,
-            and celebration. Get your Passes today!
-          </p>
-          <a class="bookbtn col-12 position-relative bottom-0 start-50 translate-middle-x rounded-5"
-            href='assests/pages/booking.html' type="button">
-            Book Now
-          </a>
+    <div class="booking py-5">
+      <div class="container">
+        <P class="heading h1">Get Your Pass Now</P>
+        <div class="booking-contain d-lg-flex d-md-flex d-sm-block gap-4">
+          <div class="pass col-12 col-lg-9 col-md-8">
+            <video class="rounded-4 col-12" src="assests/video/garba pass.mp4" autoplay muted loop>
+          </div>
+          <div
+            class="booking-pass d-block align-content-center position-relative rounded-4 col-lg-3 col-md-4 p-lg-3 p-2">
+            <p>Experience Garba like never before! Our AC Dome provides the perfect setting for a night of dance, music,
+              and celebration. Get your Passes today!
+            </p>
+            <a class="bookbtn col-12 position-relative bottom-0 start-50 translate-middle-x rounded-5"
+              href='assests/pages/booking.html' type="button">
+              Book Now
+            </a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="slider-container py-4">   
-    <p class="heading h1 text-white text-center">Gallery</p>
-    <div class="slider">
-      <div class="slider-wrapper">
-        <button id="prev-slide" class="slide-button material-symbols-rounded">
-          chevron_left
-        </button>
-        <!-- Slider -->
-        <div class="responsive slider p-5">
-          <div class="img-list">
-            <img class="img-item rounded-4 " src="assests/img/Screenshot 2024-06-12 132022.png" alt="" />
+    <div class="slider-container py-4">
+      <p class="heading h1 text-white text-center">Gallery</p>
+      <div class="slider">
+        <div class="slider-wrapper">
+          <button id="prev-slide" class="slide-button material-symbols-rounded">
+            chevron_left
+          </button>
+          <!-- Slider -->
+          <div class="responsive slider p-5">
+            <div class="img-list">
+              <img class="img-item rounded-4 " src="assests/img/Screenshot 2024-06-12 132022.png" alt="" />
+            </div>
+            <div class="img-list">
+              <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132045.png" alt="" />
+            </div>
+            <div class="img-list">
+              <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132139.png" alt="" />
+            </div>
+            <div class="img-list">
+              <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132206.png" alt="" />
+            </div>
+            <div class="img-list">
+              <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132312.png" alt="" />
+            </div>
+            <div class="img-list">
+              <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132330.png" alt="" />
+            </div>
+            <div class="img-list">
+              <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132433.png" alt="" />
+            </div>
+            <div class="img-list">
+              <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132504.png" alt="" />
+            </div>
           </div>
-          <div class="img-list">
-            <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132045.png" alt="" />
-          </div>
-          <div class="img-list">
-            <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132139.png" alt="" />
-          </div>
-          <div class="img-list">
-            <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132206.png" alt="" />
-          </div>
-          <div class="img-list">
-            <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132312.png" alt="" />
-          </div>
-          <div class="img-list">
-            <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132330.png" alt="" />
-          </div>
-          <div class="img-list">
-            <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132433.png" alt="" />
-          </div>
-          <div class="img-list">
-            <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132504.png" alt="" />
-          </div>
-        </div>
-        <a href="assests/pages/gallery.html"><button id="next-slide"
-          class="slide-button material-symbols-rounded">chevron_right</button></a>
+          <a href="assests/pages/gallery.html"><button id="next-slide"
+              class="slide-button material-symbols-rounded">chevron_right</button></a>
 
-        <!-- control arrows
+          <!-- control arrows
         <div class="prev-btn">
           <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         </div>
@@ -175,79 +176,79 @@
           <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         </div> -->
 
+        </div>
+      </div>
+    </div>
+
+    <div class="slider-container2 container py-4">
+      <p class="heading h1">Videos</p>
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="row gap-0 row-gap-3 grid justify-content-center">
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row gap-0 row-gap-3 grid justify-content-center">
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row gap-0 row-gap-3 grid justify-content-center">
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
+              </div>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
     </div>
   </div>
-
-  <div class="slider-container2 container py-4">
-    <p class="heading h1">Videos</p>
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <div class="row gap-0 row-gap-3 grid justify-content-center">
-                    <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
-                    </div>
-                    <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
-                    </div>
-                    <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
-                    </div>
-                    <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="First slide">
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="row justify-content-center">
-                    <div class="col-6 col-sm-6 col-md-3">
-                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="Second slide">
-                    </div>
-                    <div class="col-6 col-sm-6 col-md-3">
-                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="Second slide">
-                    </div>
-                    <div class="col-6 col-sm-6 col-md-3">
-                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="Second slide">
-                    </div>
-                    <div class="col-6 col-sm-6 col-md-3">
-                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="Second slide">
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="row justify-content-center">
-                    <div class="col-6 col-sm-6 col-md-3">
-                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="Third slide">
-                    </div>
-                    <div class="col-6 col-sm-6 col-md-3">
-                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="Third slide">
-                    </div>
-                    <div class="col-6 col-sm-6 col-md-3">
-                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="Third slide">
-                    </div>
-                    <div class="col-6 col-sm-6 col-md-3">
-                        <img class="img-item rounded-4" src="assests/img/GV.webp" alt="Third slide">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-</div>
-</div>
 
   <footer>
     <div class="content">
