--- a/index.html
+++ b/index.html
@@ -132,43 +132,72 @@
       </div>
     </div>
 
-    <div class="slider-container py-4">
-      <p class="heading h1 text-white text-center">Gallery</p>
-      <div class="slider">
-        <div class="slider-wrapper">
-          <button id="prev-slide" class="slide-button material-symbols-rounded">
-            chevron_left
-          </button>
-          <!-- Slider -->
-          <div class="responsive slider p-5">
-            <div class="img-list">
-              <img class="img-item rounded-4 " src="assests/img/Screenshot 2024-06-12 132022.png" alt="" />
-            </div>
-            <div class="img-list">
-              <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132045.png" alt="" />
-            </div>
-            <div class="img-list">
-              <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132139.png" alt="" />
-            </div>
-            <div class="img-list">
-              <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132206.png" alt="" />
-            </div>
-            <div class="img-list">
-              <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132312.png" alt="" />
-            </div>
-            <div class="img-list">
-              <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132330.png" alt="" />
-            </div>
-            <div class="img-list">
-              <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132433.png" alt="" />
-            </div>
-            <div class="img-list">
-              <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132504.png" alt="" />
+    <div class="slider-container2 container py-4">
+      <p class="heading h1">Gallery</p>
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="row gap-0 row-gap-3 grid justify-content-center">
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132022.png" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132045.png" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132139.png" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132206.png" alt="First slide">
+              </div>
             </div>
           </div>
-          <a href="assests/pages/gallery.html"><button id="next-slide"
-              class="slide-button material-symbols-rounded">chevron_right</button></a>
+          <div class="carousel-item">
+            <div class="row gap-0 row-gap-3 grid justify-content-center">
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132312.png" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132330.png" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132433.png" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132504.png" alt="First slide">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">   
+            <div class="row gap-0 row-gap-3 grid justify-content-center">
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132536.png" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 134034.png" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 133303.png" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132828.png" alt="First slide">
+              </div>
+            </div>
+          </div>
         </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </div>
 
