--- a/assests/pages/about.html
+++ b/assests/pages/about.html
@@ -242,8 +242,7 @@
           <span class="logo_name"><img src="/assests/img/Avsar-logo.png" alt="" /></span>
         </div>
         <div class="media-icons">
-          <a target="on_blank" href="https://www.facebook.com/share/hYZhNgkgVBdCk1dS/?mibextid=qi2Omg"><i
-              class="fab fa-facebook"></i></a>
+          <a target="on_blank" href="https://www.facebook.com/share/hYZhNgkgVBdCk1dS/?mibextid=qi2Omg"><i class="fab fa-facebook"></i></a>
           <a target="on_blank" href="https://www.instagram.com/avsar__events9/"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
