--- a/assests/pages/about.html
+++ b/assests/pages/about.html
@@ -201,7 +201,7 @@
     </div>
 
     <div class="spons-card">
-      <img class="spons-img" src="/assests/img/uday.jpeg" alt="">
+      <img class="spons-img bg-primary-subtle p-2" src="/assests/img/uday.png" alt="">
       <!-- <h5 class="head-name">John Smith</h5> -->
       <span class="role">Uday Palace</span>
     </div>
