--- a/assests/pages/sponsors.html
+++ b/assests/pages/sponsors.html
@@ -84,7 +84,7 @@
       <p class="h1">Our Hotel Partners</p>
       <div class="s2 gap-4">
         <div class="row content col-lg-6 col-md-6 col-12">
-          <p class="h2">Uday Palace</p>
+          <p class="h2">Ajay's Cafe</p>
           <p class="d-flex text-capitalize fs-5">Unn Village, Opposite Sai Baba Temple, Navsari 396445, India.
             <br>
             <br>
@@ -104,14 +104,14 @@
   </div>
   <div class="sponsor3 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
-      <p class="h1">Our Hotel Partners</p>
+      <p class="h1">Our Partners</p>
       <div class="s1 gap-4">
         <div class="row img col-lg-6 col-md-6 col-12">
           <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
             src="/assests/img/white logo.png">
         </div>
         <div class="row content col-lg-6 col-md-6 col-12">
-          <p class="h2">Uday Palace</p>
+          <p class="h2">Marketing Solver</p>
           <p class="d-flex text-capitalize fs-5">Unn Village, Opposite Sai Baba Temple, Navsari 396445, India.
             <br>
             <br>
@@ -128,10 +128,10 @@
   
   <div class="sponsor4 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
-      <p class="h1">Our Hotel Partners</p>
+      <p class="h1">Our Partners</p>
       <div class="s2 gap-4">
         <div class="row content col-lg-6 col-md-6 col-12">
-          <p class="h2">Uday Palace</p>
+          <p class="h2">The Real Value</p>
           <p class="d-flex text-capitalize fs-5">Unn Village, Opposite Sai Baba Temple, Navsari 396445, India.
             <br>
             <br>
@@ -155,10 +155,10 @@
       <div class="s1 gap-4">
         <div class="row img col-lg-6 col-md-6 col-12">
           <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
-            src="/assests/img/uday.png">
+            src="/assests/img/jp.png">
         </div>
         <div class="row content col-lg-6 col-md-6 col-12">
-          <p class="h2">Uday Palace</p>
+          <p class="h2">J. P. Biscuit Bakery</p>
           <p class="d-flex text-capitalize fs-5">Unn Village, Opposite Sai Baba Temple, Navsari 396445, India.
             <br>
             <br>
@@ -175,10 +175,10 @@
   
   <div class="sponsor6 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
-      <p class="h1">Our Hotel Partners</p>
+      <p class="h1">Our Partners</p>
       <div class="s2 gap-4">
         <div class="row content col-lg-6 col-md-6 col-12">
-          <p class="h2">Uday Palace</p>
+          <p class="h2">Goldy Solar</p>
           <p class="d-flex text-capitalize fs-5">Unn Village, Opposite Sai Baba Temple, Navsari 396445, India.
             <br>
             <br>
@@ -191,21 +191,21 @@
         </div>
         <div class="row img col-lg-6 col-md-6 col-12">
           <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
-            src="/assests/img/ajay.png">
+            src="/assests/img/goldi.png">
         </div>
       </div>
     </div>
   </div>
   <div class="sponsor7 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
-      <p class="h1">Our Hotel Partners</p>
+      <p class="h1">Our Partners</p>
       <div class="s1 gap-4">
         <div class="row img col-lg-6 col-md-6 col-12">
           <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
-            src="/assests/img/uday.png">
+            src="/assests/img/NAVSARI.png">
         </div>
         <div class="row content col-lg-6 col-md-6 col-12">
-          <p class="h2">Uday Palace</p>
+          <p class="h2">Navsari360</p>
           <p class="d-flex text-capitalize fs-5">Unn Village, Opposite Sai Baba Temple, Navsari 396445, India.
             <br>
             <br>
@@ -222,10 +222,10 @@
   
   <div class="sponsor8 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
-      <p class="h1">Our Hotel Partners</p>
+      <p class="h1">Our Partners</p>
       <div class="s2 gap-4">
         <div class="row content col-lg-6 col-md-6 col-12">
-          <p class="h2">Uday Palace</p>
+          <p class="h2">Crazy Beats</p>
           <p class="d-flex text-capitalize fs-5">Unn Village, Opposite Sai Baba Temple, Navsari 396445, India.
             <br>
             <br>
@@ -238,21 +238,21 @@
         </div>
         <div class="row img col-lg-6 col-md-6 col-12">
           <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
-            src="/assests/img/ajay.png">
+            src="/assests/img/beats.jpeg">
         </div>
       </div>
     </div>
   </div>
   <div class="sponsor9 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
-      <p class="h1">Our Hotel Partners</p>
+      <p class="h1">Our Partners</p>
       <div class="s1 gap-4">
         <div class="row img col-lg-6 col-md-6 col-12">
           <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
-            src="/assests/img/uday.png">
+            src="/assests/img/buddy.png">
         </div>
         <div class="row content col-lg-6 col-md-6 col-12">
-          <p class="h2">Uday Palace</p>
+          <p class="h2">Buddy's</p>
           <p class="d-flex text-capitalize fs-5">Unn Village, Opposite Sai Baba Temple, Navsari 396445, India.
             <br>
             <br>
@@ -269,7 +269,7 @@
   
   <div class="sponsor10 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
-      <p class="h1">Our Hotel Partners</p>
+      <p class="h1">Our Partners</p>
       <div class="s2 gap-4">
         <div class="row content col-lg-6 col-md-6 col-12">
           <p class="h2">Uday Palace</p>
